5.0b3 -> 5.0b4:
    - rse: fix invocaction of GnuPG's gpg(1) command for gnupg(<path>) dependency assertions
    - afb: hide the rpmlib Version/Timestamp/Vendor markers spew unless verbose.
    - rse: fix %{@foo} macro stack expansion including also the value at the stack bottom
    - rse: remove the confusing additional --predefine behaviour when --define is used as the first CLI option
    - jbj: simplify expandFIFO().
    - jbj: use "\n", not ",", as the default for %@foo expansion.
    - jbj: fixup %{@foo:, } per rse comments.
    - jbj: convert %{@foo:|} to "foo|bar|quux" tuple. %@foo assumes CSV comma.
    - rse: implement "rpm --undefine <macro>" as the counterpart to "rpm --define '<macro> <value>'"
    - afb: added %__objext,%__libext,%__shlibext,%__exeext for file extensions.
    - rse: make size of line buffer for .spec file parsing run-time configurable via macro _spec_line_buffer_size
    - rse: improve %patch macro implementation: less expansion redundancy and macro namespace collision avoidance
    - rse: fix %{uncompress:<file>.lzo} by passing the required "-dc" options to LZOP's lzop(1)
    - rse: fix %{uncompress:<file>.lzma} by passing the required "-dc" options to LZMA Utils' lzma(1)
    - rse: support arbitrary hash algorithm via the originally intended syntax "digest([<algorithm>:]/path) = hex"
    - rse: compare MD5 hex value on "digest(/path) = hex" dependency case-insensitive to be less restrictive in syntax
    - rse: merge scripts/lua-dump.lua directly into lua/local/llocal.lua to make it always easily available
    - rse: add local Lua functions util.rmatch() and util.rsubst() for regex matching/substitution
    - rse: improve rex.new Lua object by using PCRE if possible and fallback to POSIX regex only
    - rse: fix loading of "local" Lua extension: it has to come after the other extensions as uses them
    - rse: add error handling to the Lua script loading code generated by bin2c